@@ -2,4 +2,4 @@
 
 stop it you stupiud stupid stupiudc sut[psud siutpguad sahgkoejkhpesz
 
-wat u mean stop[?](https://the-place.pages.dev)
+[?](https://the-place.pages.dev)
